first measurements and plot function

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ftp": 300, "target_hr": 140, "power_trainer": "Not connected", "hr_monitor": "Not connected"}
+{"ftp": 380, "target_hr": 140, "power_trainer": "Not connected", "hr_monitor": "fenix 7X"}
