--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "ftp": 380,
-    "target_hr": 141,
-    "power_trainer": "Not connected",
-    "hr_monitor": "Not connected",
+    "target_hr": 140,
+    "power_trainer": "Zwift Hub",
+    "hr_monitor": "fenix 7X",
     "pid_params": {
         "Kp": 0.002408,
         "Ti": 9.43,
