--- a/config.json
+++ b/config.json
@@ -1,11 +1,12 @@
 {
     "ftp": 380,
     "target_hr": 140,
-    "power_trainer": "Zwift Hub",
-    "hr_monitor": "fenix 7X",
+    "power_trainer": "Not connected",
+    "hr_monitor": "Not connected",
     "pid_params": {
         "Kp": 0.002408,
         "Ti": 9.43,
         "Td": 21.2
-    }
+    },
+    "aggressiveness": 1.0
 }
